--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,23 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+# Logging Configuration
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
+logging.level.root=INFO
+logging.level.com.north.springboot3=DEBUG
+logging.level.org.springframework.web=INFO
+logging.file.name=application.log
 
-# example MySQL
+logging.level.org.springframework.security= trace
+# Actuator Configuration
+management.endpoints.web.exposure.include=*
+management.endpoints.web.base-path=/actuator
+management.endpoint.health.show-details=always
+management.endpoint.health.show-components=always
+management.info.env.enabled=true
+management.info.java.enabled=true
+management.info.os.enabled=true
+
+
+
 
